=== HEAD

* Allow Database#get to take an array to return multiple values, similar to map/select_map (jeremyevans)

* Default :prefetch_rows to 100 in the Oracle adapter (andrewhr) (#592)

=== 3.42.0 (2012-12-03)

* If an exception occurs while committing a transaction, attempt to rollback (jeremyevans)

* Support setting default string column sizes on a per-Database basis via default_string_column_size (jeremyevans)

* Reset Model.instance_dataset when extending the model's dataset (jeremyevans)

* Make the force_encoding plugin work with frozen strings (jeremyevans)

* Add Database#do on PostgreSQL for using the DO anonymous code block execution statement (jeremyevans)

* Remove Model.dataset_methods (jeremyevans)

* Allow subset to be called inside a dataset_module block (jeremyevans)

* Make Dataset#avg, #interval, #min, #max, #range, and #sum accept virtual row blocks (jeremyevans)

* Make Dataset#count use a subselect when the dataset has an offset without a limit (jeremyevans) (#587)

* Dump deferrable status of unique indexes on PostgreSQL (radford) (#583)

* Extend deferrable constraint support to all types of constraints, not just foreign keys (radford, jeremyevans) (#583)

* Support Database#copy_table and #copy_into on jdbc/postgres (bdon) (#580)

* Make Dataset#update not use a limit (TOP) on Microsoft SQL Server 2000 (jeremyevans) (#578)

=== 3.41.0 (2012-11-01)

* Add bin/sequel usage guide (jeremyevans)

* Make Dataset#reverse and #reverse_order accept virtual row blocks (jeremyevans)

* Add Sequel.delay for generic delayed evaluation (jeremyevans)

* Make uniqueness validations correctly handle nil values (jeremyevans)

* Support :unlogged option for create_table on PostgreSQL (JonathanTron) (#575)

* Add ConnectionPool#pool_type to get the type of connection pool in use (jeremyevans)

* Explicitly mark primary keys as NOT NULL on SQLite (jeremyevans)

* Add support for renaming primary key columns on MySQL (jeremyevans)
