@@ -1,5 +1,7 @@
 === HEAD
 
+* Skip stripping of blob columns in the string_stripper plugin (jeremyevans) (#593)
+
 * Allow Database#get to take an array to return multiple values, similar to map/select_map (jeremyevans)
 
 * Default :prefetch_rows to 100 in the Oracle adapter (andrewhr) (#592)
